test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-oknil-owned.chpl
//  lhs: shared!  rhs: owned?  error: nlb

class MyClass {
  var x: int;
}

var rhs: owned MyClass?;

var lhs: shared MyClass = rhs;

compilerError("done");
