test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-oknil-owned.good
init-var-nonnil-shared-from-oknil-owned.chpl:9: error: cannot initialize 'shared MyClass' from a 'owned MyClass?'
note: An additional error is hidden. Use --print-additional-errors to see it.
